# linx-os-rpc

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh
docs/: OS-API协议定义.md  rpc_demo.md
examples/golang-test-server/: Makefile  README.md  demo.sh  go.mod
examples/golang-test-server/cmd/client/: main.go
examples/golang-test-server/cmd/server/: main.go
examples/golang-test-server/internal/: device_manager.go  device_service.go
examples/golang-test-server/proto/: device.pb.go  device.proto  device_grpc.pb.go
examples/xiaozhi-integration/: CMakeLists.txt  README.md  build.sh  client_simple.cpp  xiaozhi_linxos_integration.cpp
proto/: device.proto
scripts/: generate_proto.sh
src/: CMakeLists.txt  linxos_rpc_config.cmake.in
src/linxos_rpc/: CMakeLists.txt  client.cpp  client.h
